<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andreapivetta.keepfocused.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/appNameLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_textview"
                android:textSize="19sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/appIconimageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/image_content_description"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/problemsAndSuggestionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appIconimageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/problems_and_suggestions"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/problemsAndSuggestionsTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:autoLink="web"
            android:text="@string/andrea_twitter" />

        <TextView
            android:id="@+id/websiteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mailTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/website_textView"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/myWebsiteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/websiteTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:autoLink="web"
            android:text="@string/my_website" />


        <TextView
            android:id="@+id/librariesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myWebsiteTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/libraries_used"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/twitter4jTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/librariesTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:autoLink="web"
            android:text="@string/count_down_timer" />

        <TextView
            android:id="@+id/CaldroidTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/twitter4jTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:autoLink="web"
            android:text="@string/count_down_animation" />

    </RelativeLayout>
</ScrollView>